Implemented ServerWrapper