@@ -4,8 +4,12 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.util.ArrayList;
+import java.util.List;
 
+import org.finomnis.mcdaemon.MCDaemon;
 import org.finomnis.mcdaemon.downloaders.MCDownloader;
+import org.finomnis.mcdaemon.tools.ConfigNotFoundException;
 import org.finomnis.mcdaemon.tools.CriticalException;
 import org.finomnis.mcdaemon.tools.DownloadTools;
 import org.finomnis.mcdaemon.tools.FileTools;
@@ -13,8 +17,9 @@ import org.finomnis.mcdaemon.tools.Log;
 
 public class VanillaDownloader implements MCDownloader {
 
-	private String folderName = "vanilla";
-	private String serverJarName = folderName + "/server.jar";
+	private String folderName = "vanilla/";
+	private String serverName = "server.jar";
+	private String serverJarName = folderName + serverName;
 	private String newJarName = serverJarName + ".new";
 	private final static String downloadUrl = "https://s3.amazonaws.com/MinecraftDownload/launcher/minecraft_server.jar";
 	
@@ -89,6 +94,33 @@ public class VanillaDownloader implements MCDownloader {
 	@Override
 	public String getServerJarName() {
 		return serverJarName;
+	}
+
+	@Override
+	public List<String> getInvocationCommand() {
+		
+		List<String> arguments = new ArrayList<String>();
+		
+		String path = System.getProperty("java.home") + "/bin/java";
+		arguments.add(path);
+		
+		try {
+			String maxMemory = MCDaemon.getConfig("serverMemory");
+			arguments.add("-Xms" + maxMemory + "M");
+			arguments.add("-Xmx" + maxMemory + "M");
+		} catch (ConfigNotFoundException e) {
+			Log.err(e);
+		}
+		
+		arguments.add("-XX:+UseConcMarkSweepGC");
+		arguments.add("-XX:+CMSIncrementalMode");
+		arguments.add("-XX:+AggressiveOpts");
+
+		arguments.add("-jar");
+		arguments.add(serverName);
+		
+		
+		return arguments;
 	}
 
 }
